--- a/front-end/inscription/styl.css
+++ b/front-end/inscription/styl.css
@@ -13,28 +13,40 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(253, 253, 253);
-    margin-top: 20px;
-    margin-bottom: 20px;
+    background-color: rgb(232, 232, 239);
 }
 .container{
     min-height: 550px;
-    width: 450px;
-    background-color: rgba(255, 255, 255, 0.71);
+    width: 430px;
+    background-color: rgb(0, 30, 83);
     border-radius: 5px;
     padding: 10px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid rgb(0, 0, 0);
+    box-shadow: 0 0 5px 2px  rgba(0, 30, 83, 0.526);
     position: relative;
+    margin: 15px;
+    box-sizing: border-box;
 }
-
+.container h2{
+    color: white;
+    text-decoration: underline;
+}
+#titr{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+#titr img{
+    height: 30px;
+}
 .container form{
     display: flex;
     flex-direction: column;
-    /* background-color: rgba(255, 0, 0, 0.148); */
     justify-content: center;
     align-items: center;
     width: 95%;
@@ -43,28 +55,25 @@ body{
     display: flex;
     flex-direction: column;
     gap: 5px;
-    /* background-color: yellow; */
     width: 95%;
     margin-top: 15px;
 }
 .container form label{
     font-size: .8rem;
     font-weight: 500;
+    color: white;
 }
 .container form div input{
-    width: 90%;
-    /* background-color: rgb(184, 195, 245); */
+    width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.37);
-    /* border: none; */
     outline: none;
     height: 25px;
     border-radius: 5px;
     padding-left: 10px;
     transition: .3s;
-    background-color: #ffffff37;
+    background-color: #ffffff;
 }
 
-/* configuration des regex */
 .errorMail{
     border: 1px solid red!important;
 }
@@ -94,19 +103,17 @@ body{
     border: 1px solid rgba(0, 68, 255, 0.821);
 }
 .nomPrenom div{
-    /* background-color: blue; */
     margin-top: 0px!important;
 }
 .nomPrenom .NP{
-    /* background-color: green; */
     flex-direction: row;
+    width: 100%;
 }
 .nomPrenom .NP input{
-    width: 47%;
+    width: 50%;
 }
 
 .container form .accord{
-    /* background-color: red; */
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -126,104 +133,20 @@ body{
     border-radius: 5px;
     border: none;
     font-size: .8rem;
-    background-color:  #1E88E5;
-    color: white;
+    background-color:  #ffffff;
+    color: rgb(0, 0, 0);
     font-weight: 600;
     transition: .4s;
 }
 .container form [type="submit"]:hover{
-    background-color: #2e6493;
+    background-color: #62ff8e;
+    cursor: pointer;
 }
 input::placeholder{
     font-size: .7rem;
 }
 .container form [type="checkbox"]{
-    height: 20px;
-    width: 20px;
-}
-
-
-#divbacgroud{
-    height: 100%;
-    width: 100%;
-    /* background-color: rgba(255, 0, 0, 0.214); */
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -2;
-    display: flex;
-    overflow: hidden;
-    backdrop-filter: blur(100px);
-}
-
-#divbacgroud li{
-    background-color: #1E88E5;
-    list-style: none;
-    height: 100px;
-    width: 100px;
-    margin: 10px;
-    position: relative;
-    z-index: -10;
-    animation: translate 15s infinite ease-in-out;
-}
-#divbacgroud li:nth-child(1){
-    height: 50px;
-    width: 50px;
-    animation-delay: 1s;
-}
-#divbacgroud li:nth-child(2){
-    height: 70px;
-    width: 70px;
-    top: 100px;
-    left: 10px;
-    animation-delay: 1.4s;
-}
-#divbacgroud li:nth-child(3){
-    height: 100px;
-    width: 100px;
-    top: 50%;
-    left: 60px;
-    animation-delay: .2s;
-}
-#divbacgroud li:nth-child(4){
-    height: 50px;
-    width: 50px;
-    animation-delay: .6s;
-}
-#divbacgroud li:nth-child(5){
-    height: 50px;
-    width: 50px;
-    top: 80%;
-    left: -200px;
-    transform: rotate(70deg);
-    animation-delay: 1.8s;
-}
-
-#blur{
-    /* background-color: red; */
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    backdrop-filter: blur(5px);
-    z-index: -1;
-}
-@keyframes translate{
-    0%{
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(70px);
-    }
-    100%{
-        transform: translateY(0);
-    }
-}
-
-
-@media(max-width:450px){
-    .container{
-        width: 95%;
-    }
+    height: 30px;
+    width: 30px;
+    transform: scale(1.3);
 }
