--- a/front-end/produit/produit-stile.css
+++ b/front-end/produit/produit-stile.css
@@ -124,8 +124,8 @@
 }
 #savoir-plus:hover{
     color: rgb(255, 255, 255);
-    background-color: rgba(25, 0, 152, 0.793);
-    border: 1px solid rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.793);
+    border-color: black;
 }
 /* slide3 */
 
@@ -228,19 +228,14 @@
     font-style: normal;
     font-size: 2rem;
     letter-spacing: 1px;
-    text-decoration: underline;
-    color: rgb(0, 0, 116);
+    /* text-decoration: underline; */
+    color: rgb(0, 0, 0);
     display: flex;
     align-items: center;
 }
-#titrecontainer h2 img{
-    width: 30px;
-}
-#titrecontainer h2 img:nth-child(1),#titrecontainer h2 img:nth-child(2){
-    transform: rotate(180deg);
-}
+
 #titrecontainer p{
-    font-weight: 800;
+    font-weight: 300;
     font-size: 1.3rem;
 }
 #produit-container{
@@ -270,9 +265,9 @@
     border-radius: 5px;
 }
 #produit-container .categories .items{
-    border: 2px solid rgba(0, 0, 0, 0.337);
-    height: 50px;
-    min-width: 130px;
+    border: 1px solid rgba(0, 0, 0, 0.337);
+    min-height: 35px;
+    min-width: 150px;
     padding: 5px;
     box-sizing: border-box;
     border-radius: 20px;
@@ -284,22 +279,20 @@
     transition: .3s;
     font-size: .8rem;
     font-weight: 800px;
+    background-color: rgba(8, 0, 255, 0.032);
 }
 #produit-container .categories .items:hover{    
     transition: .5s;
-    border: 2px solid black;
-    font-weight: 700;
+    border: 1px solid black;
 }
 /* les produit */
 #presentation-produit{
-    width: 95%;
+    width: 100%!important;
     min-height: 100px;
-    padding: 5px;
 }
 .produit-container{
     margin-top: 20px;
     min-height: 100px;
-    width: 100%;
 }
 #presentation-produit .produit-container .produit .img{
     background-image: url(../images/online-shop-dark-blue-with-shopping-element-3d-illustration_925613-52404.jpg);
@@ -377,7 +370,7 @@
     }
 
     #titrecontainer h2{
-        font-size: 2rem;
+        font-size: 1.2rem;
         letter-spacing: 0;
     }
     #titrecontainer p{
@@ -390,10 +383,6 @@
         min-height: 80px;
         margin-top: 0;
         margin-bottom: 0;
-    }
-    #titrecontainer h2{
-        font-size: 1.7rem;
-        letter-spacing: 0;
     }
     #titrecontainer p{
         font-weight: 600;
@@ -410,6 +399,7 @@
     min-width: 110px;
     font-size: .7rem;
     font-weight: 500px;
+    box-sizing: border-box;
 }
 /* header */
 #swiper-wrapper div:nth-child(2) .front .left h4{
