--- a/front-end/style.css
+++ b/front-end/style.css
@@ -709,12 +709,17 @@ nav input, .infoAcceuil input{
     font-weight: 800;
 }
 
-#presentation-produit .produit-container .produit .panier .lik img:active , .containerr .produit .panier .lik img{
+#presentation-produit .produit-container .produit .panier .lik img:active , .containerr .produit .panier .lik img:active{
     transform: scale(1.1);
     transition: .3s;
 }
+
+#presentation-produit .produit-container .produit .panier .lik img, .containerr .produit .panier .lik img{
+    height: 25px;
+}
 .containerr .produit .panier .lik img{
     transform: scale(.9);
+    transition: .3s;
 }
 
 
@@ -1101,22 +1106,22 @@ nav input, .infoAcceuil input{
         margin-top: 0;
     } 
 .recommander{
-    height: 240px;
+    height: 270px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 .recommander .produits{
     width: 100%;
-    height: 190px;
+    height: 240px;
     margin-top: 0;
     gap: 10px;
 }
 .recommander .produits .item{
-    height: 150px;
-    min-width: 120px;
+    height: 200px;
+    min-width: 170px;
 }
 .recommander .produits .item p{
-    font-size: .55rem!important;
+    font-size: .8rem!important;
     font-weight: 0;
 }
 .recommander .produits .item .panier{
@@ -1189,8 +1194,17 @@ nav input, .infoAcceuil input{
 #affichageAvis #container .items h3{
     font-size: .9rem!important;
 }
-
-
+#presentation-produit{
+    width: 98%!important;
+}
+#presentation-produit .produit-container{
+    padding-top: 0;
+    padding: 0;
+}
+#titre-produit-acc{
+    height: 20px;
+    margin-bottom: 0;
+}
 #presentation-produit .produit-container .produit .img{
     height: 200px;
 }
